force-app/main/default/objects/Order/fields/Almacen_ID__c.field-meta.xml
<CustomField>
    <fullName>Almacen_ID__c</fullName>
    <description>ID del almacén del pedido</description>
    <label>Almacen ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>