force-app/main/default/objects/Order/fields/Cliente_Validado__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Validado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permite saber si el cliente tiene ID en su cuenta validado</description>
    <label>Cliente Validado</label>
    <type>Checkbox</type>
</CustomField>