force-app/main/default/objects/Order/fields/Estatus_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Facturacion__c</fullName>
    <description>Estado de facturación de la orden según zafiro (ERP)</description>
    <label>Estatus Facturacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>