force-app/main/default/objects/Order/fields/Estatus_Surtimiento__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Surtimiento__c</fullName>
    <description>Estado surtimiento de la orden según Zafiro (ERP)</description>
    <label>Estatus Surtimiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>