force-app/main/default/objects/Order/fields/Impuesto__c.field-meta.xml
<CustomField>
    <fullName>Impuesto__c</fullName>
    <description>Impuesto declarado en numero</description>
    <label>Impuesto</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>