force-app/main/default/objects/Order/fields/IsVRByPassed__c.field-meta.xml
<CustomField>
    <fullName>IsVRByPassed__c</fullName>
    <formula>BLANKVALUE(ValidationByPassDateTime__c, $System.OriginDateTime) &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsVRByPassed</label>
    <type>Checkbox</type>
</CustomField>