force-app/main/default/objects/Order/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Moneda</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>