force-app/main/default/objects/Order/fields/Orden_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_Compra__c</fullName>
    <label>Orden de Compra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>