force-app/main/default/objects/Order/fields/Orden_Sin_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Orden_Sin_Cotizacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la orden contiene una cotización previamente.</description>
    <label>Orden Sin Cotización</label>
    <type>Checkbox</type>
</CustomField>