force-app/main/default/objects/Order/fields/Order_Date_Integration__c.field-meta.xml
<CustomField>
    <fullName>Order_Date_Integration__c</fullName>
    <formula>EffectiveDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Date Integration</label>
    <type>Date</type>
</CustomField>