force-app/main/default/objects/Order/fields/Paridad__c.field-meta.xml
<CustomField>
    <fullName>Paridad__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Paridad</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>