force-app/main/default/objects/Order/fields/SubTotal__c.field-meta.xml
<CustomField>
    <fullName>SubTotal__c</fullName>
    <description>Importe del pedido sin impuestos.</description>
    <formula>TotalAmount -  Impuesto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>