force-app/main/default/objects/Order/fields/Tipo_Entrega_Venta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Entrega_Venta__c</fullName>
    <description>Enum: &quot;CR&quot; &quot;ED&quot; &quot;EP&quot; Clave de dos letras para 
identificar la forma de entrega al cliente.
Solo se admiten los valores CR (Mostrador), 
ED (Domicilio) y EP (Entrega en Paquetería).</description>
    <label>Tipo Entrega Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>ED</fullName>
            </value>
            <value>
                <fullName>EP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>