force-app/main/default/objects/Order/fields/Tipo_Impuesto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Impuesto__c</fullName>
    <description>Enum: &quot;C&quot; &quot;E&quot; &quot;F&quot; &quot;I&quot; Clave de una letra para identificar el tipo 
de impuesto del documento.
Solo se admiten los valores C (Cero), E (Exento), F (Frontera) e I (Interior).</description>
    <label>Tipo Impuesto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>