force-app/main/default/objects/Order/fields/Tipo_Venta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Venta__c</fullName>
    <description>Enum: &quot;CO&quot; &quot;CR&quot; Clave de dos letras para identificar 
el tipo de venta. Solo se admiten los valores CO para 
contado y CR para crédito.</description>
    <label>Tipo Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>