force-app/main/default/objects/Order/fields/Total_Impuesto__c.field-meta.xml
<CustomField>
    <fullName>Total_Impuesto__c</fullName>
    <label>Total Impuesto</label>
    <summarizedField>OrderItem.Impuesto__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>