force-app/main/default/objects/Order/fields/ValidationByPassDateTime__c.field-meta.xml
<CustomField>
    <fullName>ValidationByPassDateTime__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>ValidationByPassDateTime</label>
    <type>DateTime</type>
</CustomField>