force-app/main/default/objects/Order/fields/ZF_Pedido_ID__c.field-meta.xml
<CustomField>
    <fullName>ZF_Pedido_ID__c</fullName>
    <externalId>true</externalId>
    <label>Id de Pedido Zafiro</label>
    <length>30</length>
    <type>Text</type>
</CustomField>