force-app/main/default/objects/Order/validationRules/LockRecordAfterDraft.validationRule-meta.xml
<ValidationRule>
    <fullName>LockRecordAfterDraft</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  
  NOT(
    OR(
      ISPICKVAL(Status, &quot;Draft&quot;), 
      AND(                         
        ISPICKVAL(PRIORVALUE(Status), &quot;Draft&quot;),
        ISPICKVAL(Status, &quot;Closed&quot;)
      ),
      $Permission.ByPassValidationRule, 
      ISCHANGED(ByPassValidation__c)     
    )
  )
)</errorConditionFormula>
    <errorMessage>Solo puedes modificar los campos cuando el pedido está en &quot;Borrador&quot;</errorMessage>
</ValidationRule>