force-app/main/default/objects/Order/validationRules/PreventAccountStatusModification.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventAccountStatusModification</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
    ISCHANGED(AccountId),
    ISCHANGED(Status)
  ),
  NOT(
    OR(
      ISCHANGED( ByPassValidation__c ),
      $Permission.ByPassValidationRule
    )
  )
)</errorConditionFormula>
    <errorMessage>La cuenta o el estado no pueden ser modificados.</errorMessage>
</ValidationRule>