force-app/main/default/objects/Order/validationRules/PreventStatusModification.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventStatusModification</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
  AND(
    ISCHANGED(Status),
    NOT(ISCHANGED(ByPassValidation__c))
  ),
  AND(
    ISCHANGED(Status),
    NOT($Permission.ByPassValidationRule)
  )
)</errorConditionFormula>
    <errorMessage>El campo Estado no puede modificarse manualmente.</errorMessage>
</ValidationRule>